# itmo-dm

./: .gitignore  README.md  README.ru.md  Readme.md
lab01-boolean-function/src/: a.cpp
lab03-combinatorics/src/: 02.cpp  06.cpp  09.cpp  10.cpp  13.cpp  15.cpp  16.cpp  17.cpp  23.cpp  29.cpp
lab04-probability/src/: b.cpp  c.cpp  d.cpp
lab05-automata/src/: a.cpp  e.cpp  f.cpp  g.cpp
lab08-matroids/src/: a.cpp  c.cpp  d.cpp  e.cpp
lab10-planar/: CMakeLists.txt
lab10-planar/src/: a.cpp  d.cpp
lab11-genfunction/draft/: f.cpp
lab11-genfunction/src/: b.cpp  d.cpp
lab12-turing/: Readme.md
lab12-turing/src/: aplusb.out  factorial.out  multiplication.out  tandem.out
labs/lab01-boolean-function/: CMakeLists.txt
labs/lab01-boolean-function/src/: b.cpp  c.cpp  f.cpp
labs/lab02-compression/: CMakeLists.txt
labs/lab02-compression/src/: a.cpp  b.cpp  c.cpp  d.cpp
labs/lab03-combinatorics/: CMakeLists.txt
labs/lab03-combinatorics/src/: 01.cpp  03.cpp  04.cpp  07.cpp  08.cpp  14.cpp  18.cpp  21.cpp  22.cpp  24.cpp  25.cpp  27.cpp  28.cpp
labs/lab04-probability/: CMakeLists.txt
labs/lab04-probability/src/: a.cpp
labs/lab05-automata/: CMakeLists.txt
labs/lab05-automata/src/: b.cpp  d.cpp
labs/lab07-hamilton/: CMakeLists.txt
labs/lab07-hamilton/src/: c.cpp  d.cpp
labs/lab08-matroids/: CMakeLists.txt
labs/lab08-matroids/src/: b.cpp
labs/lab10-planar/draft/: c.cpp
labs/lab10-planar/src/: b.cpp
labs/lab11-genfunction/: CMakeLists.txt
labs/lab11-genfunction/src/: a.cpp  e.cpp
labs/lab12-turing/src/: balanced.out  convertto2.out  less.out  (+5 more)
