cmake_minimum_required(VERSION 3.15)
project(lab03_combinatorics)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 src/01.cpp)
add_executable(2 src/02.cpp)
add_executable(3 src/03.cpp)
add_executable(4 src/04.cpp)
add_executable(6 src/06.cpp)
add_executable(7 src/07.cpp)
add_executable(8 src/08.cpp)
add_executable(9 src/09.cpp)
add_executable(10 src/10.cpp)
add_executable(13 src/13.cpp)
add_executable(14 src/14.cpp)
add_executable(15 src/15.cpp)
add_executable(16 src/16.cpp)
add_executable(17 src/17.cpp)
add_executable(18 src/18.cpp)
add_executable(21 src/21.cpp)
add_executable(22 src/22.cpp)
add_executable(23 src/23.cpp)
add_executable(24 src/24.cpp)
add_executable(25 src/25.cpp)
add_executable(27 src/27.cpp)
add_executable(28 src/28.cpp)
add_executable(29 src/29.cpp)